chore(netlify): add drafts option for preview

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,4 @@
     commande = "JEKYLL_ENV=production jekyll build"
 
 [context.deploy-preview]
-    command = "jekyll build"
+    command = "jekyll build --drafts"
